--- a/google_news/scrapy.cfg
+++ b/google_news/scrapy.cfg
@@ -4,8 +4,8 @@
 # http://doc.scrapy.org/en/latest/topics/scrapyd.html
 
 [settings]
-default = google.settings
+default = google_news.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = google
+project = google_news
