--- a/ggoogle/scrapy.cfg
+++ b/ggoogle/scrapy.cfg
@@ -4,8 +4,8 @@
 # http://doc.scrapy.org/en/latest/topics/scrapyd.html
 
 [settings]
-default = google_news.settings
+default = ggoogle.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = google_news
+project = ggoogle
